@@ -1,5 +1,5 @@
 
-R version 2.8.0 Under development (unstable) (2008-06-27 r46000)
+R version 2.8.0 Under development (unstable) (2008-06-28 r46012)
 Copyright (C) 2008 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -1190,6 +1190,12 @@ Warning messages:
 > stopifnot(all(phyper(c(0:3, 1e67), 0,0,0) == 1))
 > ## practically infinite loop and NaN in R <= 2.7.1 (PR#11813)
 > 
+> ## plnorm(<= 0, . , log.p=TRUE)
+> stopifnot(plnorm(-1:0, lower.tail=FALSE, log.p=TRUE) == 0,
++ 	  plnorm(-1:0, lower.tail=TRUE,	 log.p=TRUE) == -Inf)
+> ## was wrongly == 'log.p=FALSE' up to R <= 2.7.1 (PR#11867)
+> 
+> 
 > cat("Time elapsed: ", proc.time() - .ptime,"\n")
-Time elapsed:  2.148 0.019 2.169 0 0 
+Time elapsed:  4.508 0.052 4.72 0 0 
 > 
